完善所有文档

--- a/authentication/overview.mdx
+++ b/authentication/overview.mdx
@@ -1,7 +1,7 @@
 ---
 title: 概述
 description: 我们使用 Clerk 处理身份验证、用户和组织管理
-icon: shield-check
+icon: people-roof
 ---
 
 next-forge 通过使用 `auth` 包来管理身份验证。默认情况下，这个包是 [Clerk](https://clerk.com/) 的封装器，它提供了一个完整的身份验证和用户管理解决方案，可以与 Next.js 应用程序无缝集成。
