--- a/authentication/better-auth.mdx
+++ b/authentication/better-auth.mdx
@@ -1,7 +1,7 @@
 ---
 title: 使用 Better Auth
 description: 如何从 Clerk 切换到 Better Auth
-icon: shield-check
+icon: people-roof
 ---
 
 import { Authors } from '/snippets/authors.mdx';
