--- a/design-system/dark-mode.mdx
+++ b/design-system/dark-mode.mdx
@@ -6,13 +6,13 @@ icon: 'moon'
 
 next-forge 通过结合 [Tailwind CSS](https://tailwindcss.com/docs/dark-mode) 和 [next-themes](https://github.com/pacocoursey/next-themes) 提供内置的深色模式支持。
 
-## 实现
+## 实现 / Implementation  
 
 深色模式的实现使用了 Tailwind 的 `darkMode: 'class'` 策略，通过在 `html` 元素上添加 `dark` 类来切换深色模式。这种方法提供了更好的深色模式控制，并防止主题闪烁。
 
 应用程序中已经配置了 `next-themes` provider，它自动处理主题持久化和系统偏好检测。第三方组件（如 Clerk's Provider 和 Sonner）也已经预先配置以遵循这个设置。
 
-## 使用方法
+## 使用方法 / Usage
 
 默认情况下，每个应用程序主题都会默认使用用户的操作系统偏好设置。
 
